<resources>
    <string name="app_name">ThePolyCoffee</string>
    <string name="facebook_app_id">148042319148302</string>
    <string name="fb_login_protocol_scheme">fb148042319148302</string>
    <string name="version">1.0.0</string>

    <string name="map_api_key">AIzaSyBaPYvB9YzMguH4WD5l4qzvqtlrwmJUkII</string>
    <string name="setting_account">Edit Profile</string>
    <string name="setting_support">Support</string>
    <string name="setting_about">About</string>
    <string name="setting_btn_logout">Sign out</string>
    <string name="setting_made_with">MADE WITH HYDRA TEAM</string>

    <string name="shopping_choose_your_address">Choose your address</string>
    <string name="shopping_order">Order</string>
    <string name="the_poly_coffee_2017">/The.Poly.Coffee.2017</string>
    <string name="thepolycoffeevn">/thepolycoffeevn</string>
    <string name="_01655933593">01655933593</string>
    <string name="thepolycoffee_gmail_com">thepolycoffee@gmail.com</string>

    <string name="editprofile_full_name">Full Name</string>
    <string name="editprofile_edit_photo">Edit Photo</string>
    <string name="editprofile_e_mail">E-mail</string>
    <string name="editprofile_birth_day">Birth Day</string>
    <string name="editprofile_gender">Gender</string>
    <string name="editprofile_contact_number">Contact Number</string>
    <string name="editprofile_save_profile">Save Profile</string>
    <string name="home_name">Name</string>
    <string name="purchase_update_phone">Update your phone number before making a purchase!</string>
    <string name="purchase_change_recipients">Change recipients!</string>
    <string name="purchase_input_phone">Input your Phone number</string>
    <string name="purchase_input_name">Input your Name</string>
    <string name="purchase_btn_cancel">Cancel</string>
    <string name="purchase_btn_update">Update</string>
    <string name="purchase_btn_change">Change</string>
    <string name="home_rank">Rank</string>
    <string name="shopping_tv_search">Choose your address!</string>
    <string name="idadmin">NzvyGNkPilTCTgmKZHVaXLHVmAH2</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />


</resources>
