<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_change_recipients"
        android:textColor="@color/color_main"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/changeNameOrder"
            android:hint="@string/purchase_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:drawableLeft="@drawable/ic_logo_man"
            android:drawablePadding="8dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/changePhoneOrder"
            android:hint="@string/purchase_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:lines="1"
            android:drawableLeft="@drawable/ic_phone_mini"
            android:drawablePadding="8dp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">
        <Button
            android:id="@+id/changePhoneCancel"
            android:text="@string/purchase_btn_cancel"
            android:background="@drawable/button_more_news_custom"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginRight="16dp"/>
        <Button
            android:id="@+id/changePhoneYes"
            android:text="@string/purchase_btn_change"
            android:background="@drawable/button_more_news_custom"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </LinearLayout>


</LinearLayout>