<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.pro112.hydrateam.thepolycoffee.activity.settings.Support">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Facebook"
            style="@style/LinearSettings">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border_circle"
                    android:src="@mipmap/ic_public" />

                <TextView
                    style="@style/TextSettings"
                    android:text="@string/the_poly_coffee_2017" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/intagram"
            style="@style/LinearSettings">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border_circle"
                    android:src="@mipmap/ic_share" />

                <TextView
                    style="@style/TextSettings"
                    android:text="@string/thepolycoffeevn" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sdt"
            style="@style/LinearSettings">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border_circle"
                    android:src="@mipmap/ic_support" />

                <TextView
                    style="@style/TextSettings"
                    android:text="@string/_01655933593" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gmail"
            style="@style/LinearSettings">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border_circle"
                    android:src="@mipmap/ic_mail" />

                <TextView
                    style="@style/TextSettings"
                    android:text="@string/thepolycoffee_gmail_com" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
